--- a/README
+++ b/README
@@ -6,3 +6,5 @@ http://ecma262-5.com/ELS5_HTML.htm#Annex_C
 For the visual test page open test.html in your browser (you can also click on file:///Users/angus/workspace/github/strictMode/src/test.html to run the hosted version)
 
 The file tests.js can also be dumped into your developer console - just switch mode to CONSOLE_MODE  
+
+(Note that browser naming is pulled from a utility at git@github.com:angus-c/assortedLameness
